--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,5 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.2.0'
     testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:2.0.5-beta'
-    androidTestCompile 'com.android.support.test:runner:0.3'
+    testCompile 'org.mockito:mockito-all:1.10.19'
 }
